[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_script"]

[node name="PauseMenu" type="CanvasLayer"]
layer = 100
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -260.0
offset_top = -170.0
offset_right = 260.0
offset_bottom = 170.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "PAUSED"
horizontal_alignment = 1

[node name="Separator1" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="PowerupsLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "POWERUPS"
horizontal_alignment = 1

[node name="PowerupsScroll" type="ScrollContainer" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="PowerupsContainer" type="VBoxContainer" parent="Panel/VBoxContainer/PowerupsScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6

[node name="Separator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="ResumeButton" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "RESUME"

[node name="GiveUpButton" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "GIVE UP"
